Added ability for areas to stop mobs from spawning Fixed memory leak with ClientEventHandler